@@ -20,7 +20,7 @@ LDADD = ../googletest/lib/libgtest.la \
 TESTS = $(check_PROGRAMS)
 check_PROGRAMS = test_mylist test_myset test_sid test_relvbr \
 	test_release test_sid_list test_rel_list test_sccsdate \
-	test_delta test_stack
+	test_delta test_stack test_delta-table
 
 test_mylist_SOURCES = test_mylist.cc
 test_myset_SOURCES = test_myset.cc
@@ -32,6 +32,7 @@ test_rel_list_SOURCES = test_rel_list.cc
 test_sccsdate_SOURCES = test_sccsdate.cc
 test_delta_SOURCES = test_delta.cc
 test_stack_SOURCES = test_stack.cc
+test_delta_table_SOURCES = test_delta-table.cc
 
 # The death tests may leave a core file behind.  Some systems also use
 # core.NNNN as the name of a core file (NNNN is usually the PID).
